// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`conditions translation should translate "JavaScript expression ... equals ..." line 1`] = `
{
  "children": [
    {
      "children": [
        {
          "comparator": "",
          "contentType": "block",
          "expectedValue": {
            "language": "javascript",
            "type": "code-block",
            "value": "someJS()",
          },
          "name": [
            {
              "type": "text",
              "value": "expression",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "returned value",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "expected result",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "JavaScript expression",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "JavaScript expression ... equals ..." line without variables 1`] = `
{
  "children": [
    {
      "children": [
        {
          "comparator": "",
          "contentType": "block",
          "expectedValue": {
            "language": "javascript",
            "type": "code-block",
            "value": "someJS()",
          },
          "name": [
            {
              "type": "text",
              "value": "expression",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "returned value",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "expected result",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "JavaScript expression",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "JavaScript expression with variables ... equals ..." line 1`] = `
{
  "children": [
    {
      "children": [
        {
          "comparator": "",
          "contentType": "block",
          "expectedValue": {
            "language": "javascript",
            "type": "code-block",
            "value": "someJS("123")",
          },
          "name": [
            {
              "type": "text",
              "value": "expression",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
        {
          "comparator": undefined,
          "contentType": "block",
          "expectedValue": {
            "language": "javascript",
            "type": "code-block",
            "value": "someJS("<%var1%>")",
          },
          "name": [
            {
              "type": "text",
              "value": "(with variables)",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "returned value",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "expected result",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "JavaScript expression",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "JavaScript expression with variables ... equals ..." line without variables 1`] = `
{
  "children": [
    {
      "children": [
        {
          "comparator": "",
          "contentType": "block",
          "expectedValue": {
            "language": "javascript",
            "type": "code-block",
            "value": "someJS("<%var1%>")",
          },
          "name": [
            {
              "type": "text",
              "value": "expression",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "returned value",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "expected result",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "JavaScript expression",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "PS4 video for current had no error" line 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "PlayStation 4 video had no error for current source",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "PS4 video for current had no error" line without variables 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "PlayStation 4 video had no error for current source",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "PS4 video had no error" line 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "PlayStation 4 video had no error for any source",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "PS4 video had no error" line without variables 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "PlayStation 4 video had no error for any source",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "PS4 video has props" line 1`] = `
{
  "children": [
    {
      "children": [
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "123",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "width",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "subject",
      "value": "PlayStation 4 video",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "PS4 video has props" line without variables 1`] = `
{
  "children": [
    {
      "children": [
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "123",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "width",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "subject",
      "value": "PlayStation 4 video",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "application has exited" line 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Application has exited",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "application has exited" line without variables 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Application has exited",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "assert OCR comparators" line 1`] = `
{
  "children": [
    {
      "children": [],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "OCR",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "assert OCR comparators" line without variables 1`] = `
{
  "children": [
    {
      "children": [],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "OCR",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "assert image by filepath on screen" line 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Image (/suitest-project/image.jpg) on screen",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "assert image by filepath on screen" line without variables 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Image (/suitest-project/image.jpg) on screen",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "assert image by id in region" line 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Image (image-api-id) in region 10 10 10 10",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "assert image by id in region" line without variables 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Image (image-api-id) in region 10 10 10 10",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "assert image by id on screen" line 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Image (image-api-id) on screen",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "assert image by id on screen" line without variables 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Image (image-api-id) on screen",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "assert image by url on screen" line 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Image (https://suite.st/) on screen",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "assert image by url on screen" line without variables 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "Image (https://suite.st/) on screen",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "cookie with properties" line 1`] = `
{
  "children": [
    {
      "children": [],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "cookie ",
    },
    {
      "type": "subject",
      "value": "my-cookie",
    },
    {
      "type": "text",
      "value": " with expected properties",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "cookie with properties" line without variables 1`] = `
{
  "children": [
    {
      "children": [],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "cookie ",
    },
    {
      "type": "subject",
      "value": "my-cookie",
    },
    {
      "type": "text",
      "value": " with expected properties",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "cookie" line 1`] = `
{
  "children": [
    {
      "children": [
        {
          "actualValue": undefined,
          "comparator": "!=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "expect value",
            },
          ],
          "name": [
            {
              "type": "subject",
              "value": "my-cookie",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "cookie ",
    },
    {
      "type": "subject",
      "value": "my-cookie",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "cookie" line without variables 1`] = `
{
  "children": [
    {
      "children": [
        {
          "actualValue": undefined,
          "comparator": "!=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "expect value",
            },
          ],
          "name": [
            {
              "type": "subject",
              "value": "my-cookie",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "cookie ",
    },
    {
      "type": "subject",
      "value": "my-cookie",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "current location" line 1`] = `
{
  "children": [
    {
      "children": [
        {
          "actualValue": undefined,
          "comparator": "contains",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "expected value",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "current location",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Current location",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "current location" line without variables 1`] = `
{
  "children": [
    {
      "children": [
        {
          "actualValue": undefined,
          "comparator": "contains",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "expected value",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "current location",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Current location",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element ... does not exist" line 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "subject",
      "value": "Element 1",
    },
    {
      "type": "text",
      "value": " does not exist",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element ... does not exist" line without variables 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "subject",
      "value": "Element 1",
    },
    {
      "type": "text",
      "value": " does not exist",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element ... exist" line 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "subject",
      "value": "Element 1",
    },
    {
      "type": "text",
      "value": " exists",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element ... exist" line without variables 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "subject",
      "value": "Element 1",
    },
    {
      "type": "text",
      "value": " exists",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element ... is not visible" line 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "subject",
      "value": "My element",
    },
    {
      "type": "text",
      "value": " is not visible",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element ... is not visible" line without variables 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "subject",
      "value": "My element",
    },
    {
      "type": "text",
      "value": " is not visible",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element ... is visible" line 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "subject",
      "value": "My element",
    },
    {
      "type": "text",
      "value": " is visible",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element ... is visible" line without variables 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "subject",
      "value": "My element",
    },
    {
      "type": "text",
      "value": " is visible",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element matches JS with vars" line 1`] = `
{
  "children": [
    {
      "children": [
        {
          "comparator": "matches JS",
          "contentType": "block",
          "expectedValue": {
            "language": "javascript",
            "type": "code-block",
            "value": "someJS("123");",
          },
          "name": [
            {
              "type": "subject",
              "value": "{"css":".some.class","xpath":"//div","index":1}",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
        {
          "comparator": undefined,
          "contentType": "block",
          "expectedValue": {
            "language": "javascript",
            "type": "code-block",
            "value": "someJS("<%var1%>");",
          },
          "name": [
            {
              "type": "text",
              "value": "(with variables)",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "subject",
      "value": "{"css":".some.class","xpath":"//div","index":1}",
    },
    {
      "type": "text",
      "value": " matches JavaScript",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element matches JS with vars" line without variables 1`] = `
{
  "children": [
    {
      "children": [
        {
          "comparator": "matches JS",
          "contentType": "block",
          "expectedValue": {
            "language": "javascript",
            "type": "code-block",
            "value": "someJS("<%var1%>");",
          },
          "name": [
            {
              "type": "subject",
              "value": "{"css":".some.class","xpath":"//div","index":1}",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "subject",
      "value": "{"css":".some.class","xpath":"//div","index":1}",
    },
    {
      "type": "text",
      "value": " matches JavaScript",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element matches JS" line 1`] = `
{
  "children": [
    {
      "children": [
        {
          "comparator": "matches JS",
          "contentType": "block",
          "expectedValue": {
            "language": "javascript",
            "type": "code-block",
            "value": "someJS();",
          },
          "name": [
            {
              "type": "subject",
              "value": "{"css":".some.class","xpath":"//div","index":1}",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "subject",
      "value": "{"css":".some.class","xpath":"//div","index":1}",
    },
    {
      "type": "text",
      "value": " matches JavaScript",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element matches JS" line without variables 1`] = `
{
  "children": [
    {
      "children": [
        {
          "comparator": "matches JS",
          "contentType": "block",
          "expectedValue": {
            "language": "javascript",
            "type": "code-block",
            "value": "someJS();",
          },
          "name": [
            {
              "type": "subject",
              "value": "{"css":".some.class","xpath":"//div","index":1}",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "subject",
      "value": "{"css":".some.class","xpath":"//div","index":1}",
    },
    {
      "type": "text",
      "value": " matches JavaScript",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element properties" line 1`] = `
{
  "children": [
    {
      "children": [
        {
          "actualValue": undefined,
          "comparator": ">=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "123",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "video position",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "123 ± 3v5",
            },
            {
              "type": "text",
              "value": " (",
            },
            {
              "type": "code",
              "value": "123 ± <%var3%>",
            },
            {
              "type": "text",
              "value": ")",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "height",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
        {
          "actualValue": undefined,
          "comparator": "contains",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "expected text",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "text",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Unknown element (",
    },
    {
      "type": "subject",
      "value": "unknown-id",
    },
    {
      "type": "text",
      "value": ")",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element properties" line without variables 1`] = `
{
  "children": [
    {
      "children": [
        {
          "actualValue": undefined,
          "comparator": ">=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "123",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "video position",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "123 ± <%var3%>",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "height",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
        {
          "actualValue": undefined,
          "comparator": "contains",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "expected text",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "text",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "Unknown element (",
    },
    {
      "type": "subject",
      "value": "unknown-id",
    },
    {
      "type": "text",
      "value": ")",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element specified with selector array exists" line 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "subject",
      "value": "#fooBar -> div -> span",
    },
    {
      "type": "text",
      "value": " exists",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element specified with selector array exists" line without variables 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "subject",
      "value": "#fooBar -> div -> span",
    },
    {
      "type": "text",
      "value": " exists",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element with legacy name exists" line 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "subject",
      "value": "Foo Bar",
    },
    {
      "type": "text",
      "value": " exists",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element with legacy name exists" line without variables 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "subject",
      "value": "Foo Bar",
    },
    {
      "type": "text",
      "value": " exists",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element with name hint exists" line 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "subject",
      "value": "Foo Bar",
    },
    {
      "type": "text",
      "value": " exists",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element with name hint exists" line without variables 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "subject",
      "value": "Foo Bar",
    },
    {
      "type": "text",
      "value": " exists",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element with single selector exists" line 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "subject",
      "value": "#fooBar",
    },
    {
      "type": "text",
      "value": " exists",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element with single selector exists" line without variables 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "subject",
      "value": "#fooBar",
    },
    {
      "type": "text",
      "value": " exists",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "link containing "home" text exists" line 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "subject",
      "value": "link containing "home" text",
    },
    {
      "type": "text",
      "value": " exists",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "link containing "home" text exists" line without variables 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "subject",
      "value": "link containing "home" text",
    },
    {
      "type": "text",
      "value": " exists",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "link with "home page" text exists" line 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "subject",
      "value": "link with "home page" text",
    },
    {
      "type": "text",
      "value": " exists",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "link with "home page" text exists" line without variables 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "subject",
      "value": "link with "home page" text",
    },
    {
      "type": "text",
      "value": " exists",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "network request matching URL was not made excluding previously matched" line 1`] = `
{
  "children": [
    {
      "children": [
        {
          "actualValue": undefined,
          "comparator": "contains",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "/partial/url/123",
            },
            {
              "type": "text",
              "value": " (",
            },
            {
              "type": "code",
              "value": "/partial/url/<%var1%>",
            },
            {
              "type": "text",
              "value": ")",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "URL",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "GET",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "request method",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
        {
          "actualValue": undefined,
          "comparator": "contains",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "text/javascript",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "request header ",
            },
            {
              "type": "input",
              "value": "Accept-Type",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "request val2 body",
            },
            {
              "type": "text",
              "value": " (",
            },
            {
              "type": "code",
              "value": "request <%var2%> body",
            },
            {
              "type": "text",
              "value": ")",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "request body",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
        {
          "actualValue": undefined,
          "comparator": ">",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "123",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "response status",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
        {
          "actualValue": undefined,
          "comparator": "ends with",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "val2/javascript",
            },
            {
              "type": "text",
              "value": " (",
            },
            {
              "type": "code",
              "value": "<%var2%>/javascript",
            },
            {
              "type": "text",
              "value": ")",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "response header ",
            },
            {
              "type": "input",
              "value": "Content-123",
            },
            {
              "type": "text",
              "value": " (",
            },
            {
              "type": "code",
              "value": "Content-<%var1%>",
            },
            {
              "type": "text",
              "value": ")",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "response <%non_existing_var%> <%kind-of|var but not%> body",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "response body",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "network request was not made excluding previously matched requests",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "network request matching URL was not made excluding previously matched" line without variables 1`] = `
{
  "children": [
    {
      "children": [
        {
          "actualValue": undefined,
          "comparator": "contains",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "/partial/url/<%var1%>",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "URL",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "GET",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "request method",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
        {
          "actualValue": undefined,
          "comparator": "contains",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "text/javascript",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "request header ",
            },
            {
              "type": "input",
              "value": "Accept-Type",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "request <%var2%> body",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "request body",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
        {
          "actualValue": undefined,
          "comparator": ">",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "123",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "response status",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
        {
          "actualValue": undefined,
          "comparator": "ends with",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "<%var2%>/javascript",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "response header ",
            },
            {
              "type": "input",
              "value": "Content-<%var1%>",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "response <%non_existing_var%> <%kind-of|var but not%> body",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "response body",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "network request was not made excluding previously matched requests",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "network request to URL was made including matched" line 1`] = `
{
  "children": [
    {
      "children": [
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "http://suite.st/123",
            },
            {
              "type": "text",
              "value": " (",
            },
            {
              "type": "code",
              "value": "http://suite.st/<%var1%>",
            },
            {
              "type": "text",
              "value": ")",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "URL",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "network request was made in entire network log",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "network request to URL was made including matched" line without variables 1`] = `
{
  "children": [
    {
      "children": [
        {
          "actualValue": undefined,
          "comparator": "=",
          "contentType": "inline",
          "expectedValue": [
            {
              "type": "input",
              "value": "http://suite.st/<%var1%>",
            },
          ],
          "name": [
            {
              "type": "text",
              "value": "URL",
            },
          ],
          "status": undefined,
          "type": "prop",
        },
      ],
      "type": "props",
    },
  ],
  "title": [
    {
      "type": "text",
      "value": "network request was made in entire network log",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "ps video had not error" line 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "PlayStation 4 video had no error for current source",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "ps video had not error" line without variables 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "text",
      "value": "PlayStation 4 video had no error for current source",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "video exists" line 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "subject",
      "value": "video",
    },
    {
      "type": "text",
      "value": " exists",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "video exists" line without variables 1`] = `
{
  "children": [],
  "title": [
    {
      "type": "subject",
      "value": "video",
    },
    {
      "type": "text",
      "value": " exists",
    },
  ],
  "type": "condition",
}
`;
